@@ -3,6 +3,16 @@
 	* src/baobab-utils.c:
 	* src/baobab.c:
 	* src/baobab.h:
+	* src/callbacks.c:
+	Rename "start_proc_on_location" to "baobab_scan_location" for
+	consistency with the rest of the API and move the stop_scan method
+	to the main baobab API.
+
+2008-05-01  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-utils.c:
+	* src/baobab.c:
+	* src/baobab.h:
 	* src/baobab-prefs.c:
 	* src/baobab-scan.c:
 
